# tensordev

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
notebooks/: fssk_state_euler_validation_lambda0.ipynb  higher_order_bm_kernels.ipynb  hok2.ipynb  jax_shuffle.ipynb  playground.ipynb  shuffle_tests.ipynb  vsig.ipynb  vsig_kernel.ipynb
notebooks/_validation_util/: analysis_utils.py  benchmark_runner.py  plot_config.py  regime_config.py  xla_utils.py
notebooks/core/: jax_shuffle.ipynb
notebooks/free_kernel/: higher_order_bm_kernels.ipynb
notebooks/kernel/: validation.ipynb
notebooks/kernel/validation/: analyse_kernel_convergence.py  analyse_kernel_flop.py  compare_filtering.py  inspect_pde_flops.py  naive_euler.py  sweep_kernel_convergence.py  sweep_kernel_flop.py  vsig_kernel_ref.py
notebooks/sss/: euler_general.py  fssk_kernel.ipynb  run_timings.py  validation.ipynb  vsig_kernel.ipynb
notebooks/sss/validation/: analyse_coef.py  analyse_euler_convergence.py  analyse_flop_scaling.py  analyse_timing.py  analyse_timings.py  euler_general.py  fssk_setup.py  helpers.py  plot_config.py  regime_configs.py  run_timings.py  sweep_coef.py  sweep_euler_convergence.py  sweep_flop_scaling.py  sweep_timing.py  timing_utils.py  validate_euler_convergence.py  validate_euler_convergence_demo.py  validate_lambda0.py  xla_utils.py
notebooks/volterra/: cell_euler.py  fractional_validation.ipynb  predictor_corrector.py
notebooks/volterra/validation/: analyse_fssk_approx.py  analyse_vsig_convergence.py  analyse_vsig_flop_scaling.py  sweep_fssk_approx.py  sweep_vsig_convergence.py  sweep_vsig_flop_scaling.py  validate_fssk_adapter.py  vsig_setup.py
recycle_bin/: free_lie_algebra.py  signature.py  various_free_schemes.py
src/tensordev/: __init__.py  _backend.py
src/tensordev/core/: __init__.py  annotations.py  einsum.py  jax.py  jax_shuffle.py  numba.py  sequential.py  shuffle.py  shuffle_precalculation.py  shuffle_product.py  tensorflow.py  torch.py  universal.py
src/tensordev/development/: __init__.py  free.py  sig.py
src/tensordev/kernel/: __init__.py  base_kernel.py  free.py  fssk.py  higher_order.py  parallel.py  sig.py  static_kernels.py  util.py
src/tensordev/sss/: __init__.py  coeffs.py  kernel.py  lambdas.py  recursion_general.py  recursion_scalar.py  rough_approx.py  state.py  state_update.py
src/tensordev/util/: __init__.py  (+2 more)
tests/: conftest.py  tests_shuffle_jax.ipynb
tests/core/: test_adjoint_test.py  test_batch_handling.py  test_exp_and_dev.py  test_sequential_core.py  test_shuffle_jax_path.py  test_shuffle_universal.py  test_tensor_matrix_ops.py  tests_shuffle_jax.ipynb
tests/development/: test_free_development.py  test_path_signature.py
tests/kernel/: random_paths.py  test_backend_consistency.py  test_base_kernel_empirical.py  test_free_kernel.py  test_fssk_consistency.py  test_sigkernel_compat.py  test_static_kernels.py  visuals.ipynb
tests/sequential/: test_path_signature.py  test_path_signature_initial_value.py
tests/sss/: test_coefficients.py  test_fssk_kernels.py  test_fssk_state.py  test_fssk_vsig.py  test_lambdas.py  test_rough_approx.py  test_vsig_kernel_beta.py
tests/volterra/: test_eval.py  test_higher_order_vsig.py  test_kernels_coeffs.py  test_shuffle_monomials.py  test_signature.py  test_vsig_fft_q2.py
(+69 files in other folders)
