[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensordev"
version = "0.0.1"
description = "Framework-flexible tensor algebra: signatures and kernels."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [
    {name = "Paul Hager"},
    {name = "Julian Pachschwoell"},
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.24",
    "numba>=0.58",
    "array-api>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "jaxtyping>=0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "heavy: expensive tests, only run with --heavy",
]
