[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensordev"
version = "0.0.1"
description = "JAX-based tensor algebra for signatures, Volterra signatures, free developments, and signature kernels."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Paul Hager"},
    {name = "Julian Pachschwoell"},
    {name = "Luca Pelizzari"},
]
keywords = [
    "signature",
    "rough paths",
    "Volterra signature",
    "tensor algebra",
    "JAX",
    "kernel",
    "machine learning",
    "stochastic processes",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.10.0",
    "jaxlib>=0.10.0",
    "numpy>=1.24",
    "numba>=0.58",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "jaxtyping>=0.2",
]

[project.urls]
Homepage = "https://github.com/hagerpa/tensordev"
Repository = "https://github.com/hagerpa/tensordev"
Issues = "https://github.com/hagerpa/tensordev/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "heavy: expensive tests, only run with --heavy",
]